scripts/seo/__tests__/fixtures/r-seo-09/negative/04-loader-canonical-key/base.tsx
import { json, type LoaderFunctionArgs } from "@remix-run/node";

export async function loader({ params }: LoaderFunctionArgs) {
  return json({
    items: [],
  });
}

export default function Page() {
  return <div />;
}
